<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rouba Tesouro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">Start Game</string>
    <string name="game_title">Rouba Tesouro</string>
    <string name="dificult">Level</string>
    <string name="about">About</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="pvp">Player Vs Player</string>
    <string name="pvc">Player Vs Computer</string>
    <string name="voltar">Back</string>
    <string name="game_criadores">Owners:</string>
    <string name="game_criador_giovane">Giovane Biroli Cordelini</string>
    <string name="game_criador_renato">Renato Vieira Duran</string>
    <string name="game_version">Version: 1.2</string>
     
</resources>
