<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnEasy"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/easy" />

    <Button
        android:id="@+id/btnMedium"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/medium" />

    <Button
        android:id="@+id/btnHard"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/hard" />

</LinearLayout>
