<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/game_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/pvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/gameTitle"
            android:layout_below="@+id/gameTitle"
            android:layout_marginTop="42dp"
            android:text="@string/pvc" />

        <Button
            android:id="@+id/pvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pvc"
            android:layout_alignRight="@+id/pvc"
            android:layout_below="@+id/pvc"
            android:onClick="startGame"
            android:text="@string/pvp" />
        
           <Button
               android:id="@+id/about"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/pvp"
               android:layout_alignRight="@+id/pvp"
               android:layout_below="@+id/pvp"
	           android:onClick="direcionarSobre"
               android:text="@string/about" />

</RelativeLayout>
